--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^16.0.1",
+    "express": "^4.17.1",
+    "express-handlebars": "^6.0.6",
+    "mongodb": "^4.8.0",
+    "mongoose": "^5.9.17"
   }
 }
