--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.17.1",
-    "express-handlebars": "^6.0.6",
+    "express-handlebars": "^4.0.2",
     "mongodb": "^4.8.0",
-    "mongoose": "^5.9.17"
+    "mongoose": "5.13"
   }
 }
